--- a/index.html
+++ b/index.html
@@ -90,6 +90,159 @@
             </div>
         </div>
     </nav>
+    <!-- Landing page -->
+    <div class="container d-flex justify-content-center align-items-center" id="home">
+        <div class="row  ">
+            <div class="col-lg-6 ">
+                <img src="./home img1ccpy.jpg" class="img-fluid" alt="...">
+            </div>
+            <div class="col-lg-6 mt-5">
+                <li class="Hometext fw-bold ">FIND YOUR PERFECT FIT</li>
+                <li class="mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, libero fugit
+                    eveniet molestiae culpa natus minus distinctio, id sint temporibus suscipit enim pariatur? Est enim
+                    incidunt asperiores necessitatibus accusamus minus?</li>
+                <button type="button" class="btn   fw-bold ">BUY NOW</button>
+            </div>
+        </div>
+    </div>
+    <!-- Screen two -->
+    <div class="container-fluid ">
+        <div class="row mt-4 bg-body-secondary p-2">
+            <div class="col-md-4 p-2  d-flex  justify-content-center ">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body d-flex flex-column justify-content-center  text-black " id="card">
+                        <h2 class="card-title fw-bold">Men
+                            Collections</h2>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <div><a href="" class="btn btn-primary fw-bold">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 p-2  d-flex  justify-content-center">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body d-flex flex-column justify-content-center  text-black " id="card">
+                        <h2 class="card-title fw-bold">Women
+                            Collections</h2>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <div><a href="" class="btn btn-primary fw-bold">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 p-2 d-flex  justify-content-center">
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body d-flex flex-column justify-content-center  text-black " id="card">
+                        <h2 class="card-title fw-bold">Kids
+                            Collections</h2>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                        <div><a href="" class="btn btn-primary fw-bold">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container mt-5 ">
+
+        <div class="row text-center ">
+            <h6 class="text-secondary  fw-bold">The latest trends in athletic footwear</h6>
+            <h1 class="fw-bold">Sneakers & Kicks</h1>
+            <div class="row">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6 col-xs-12">
+                    <li class="fs-4 fw-bold mt-3"><span class="m-3 ">Featured</span> <span
+                            class="m-3 text-secondary">New Arrivals</span> <span class="m-3 text-secondary">Best
+                            Seller</span></li>
+                </div>
+                <div class="col-lg-3"></div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-md-4 d-flex justify-content-center align-items-center">
+                    <div class="card mb-4" style="width: 18rem;">
+                        <img src="./product-1.webp" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Classic Tennis Sneakers</h5>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="text-success fw-semibold">SportyFeet &nbsp;&nbsp;&nbsp;$25.00</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4 d-flex justify-content-center align-items-center">
+                    <div class="card mb-4" style="width: 18rem;">
+                        <img src="./product-2.webp" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Classic Leather Sneakers</h5>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="text-success fw-semibold">TrailGear &nbsp;&nbsp;&nbsp;$25.00</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-4 d-flex justify-content-center align-items-center">
+                    <div class="card mb-4" style="width: 18rem;">
+                        <img src="./product-3.webp" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">High-Top Canvas Sneakers</h5>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            <li class="text-success fw-semibold">UrbanStep &nbsp;&nbsp;&nbsp;$25.00</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- screen three -->
+    <div class="container-fluid bg-black p-5 text-light">
+        <div class="row text-center">
+            <h6 class="text-secondary">Fashion Sneakers</h6>
+            <h1 class="fw-bold ">Timeless styles for everyday wear</h1>
+            <h6 class="text-secondary">High-performance footwear for sports and workouts</h6>
+            <div class="row mt-5">
+                <div class="col-md-4 mt-4">
+                    <div class="card text-bg-dark">
+                        <img src="./box1.webp" class="card-img " alt="...">
+                        <h5 class="card-title">Comfort Meets Fashion</h5>
+                    </div>
+                </div>
+                <div class="col-md-4 mt-4">
+                    <div class="card text-bg-dark">
+                        <img src="./box2.webp" class="card-img " alt="...">
+                        <h5 class="card-title"> Elevate Your Look</h5>
+                    </div>
+                </div>
+                <div class="col-md-4 mt-4">
+                    <div class="card text-bg-dark">
+                        <img src="./box3.webp" class="card-img" alt="...">
+                        <h5 class="card-title">Step into Style</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="row ">
+                <div class="col-md-6">
+                    <div class="card text-bg-dark mt-4">
+                        <img src="./box4.webp" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                        </div>
+                        <h5 class="card-title">Shop by Brand</h5>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card text-bg-dark mt-4">
+                        <img src="./box5.webp" class="card-img" alt="...">
+                        <div class="card-img-overlay">
+                        </div>
+                        <h5 class="card-title">Sale and Clearance</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
