--- a/index.html
+++ b/index.html
@@ -243,6 +243,74 @@
             </div>
         </div>
     </div>
+    <!-- screen four -->
+     <div class="container-fluid">
+        <div class="row mt-3 p-5">
+            <div class="col-md-6 d-flex flex-column justify-content-center">
+                <h5 class="text-secondary mb-4">Our most popular styles</h6>
+                <h1 class="fw-bold mb-2" style="font-size: 66px;">Save big on shoes <br>
+                    from last season</h1>
+                    <p>Morbi natoque id finibus natoque sapien turpis elementum maximus. Sociosqu auctor a urna consequat laoreet nisi accumsan magna. Adipiscing vulputate nec euismod, a aliquam enim. Mi facilisi ex est habitant lacus sagittis vitae.</p>
+                    <p>Molestie dolor mus vitae penatibus sed lectus convallis ut neque. Leo elementum euismod penatibus cras sociosqu aliquet tellus.</p>
+                    <div><a href="" class="btn btn-primary fw-bold">Shop Now</a>
+                    </div>
+            </div>
+            <div class="col-md-6">
+                <img class="mt-5 img-fluid" src="./video-pic 1.webp" alt="">
+            </div>
+        </div>
+     </div>
+     <!-- screen five -->
+    <div class="bgimg  d-flex justify-content-center flex-column ">
+        <h5 class="text-secondary">Laoreet ridiculus congue magna</h5>
+        <h1 class="fw-bold">"Unbeatable price, and it’s super </h1>
+        <h1 class="fw-bold">comfortable"</h1>
+        <button type="button" class="btn btn-light text-light fw-bold ">view More</button>
+    </div>
+    <div id="scrn5" class="container   text-center mt-5 mb-3">
+        <h1 class="fw-semibold">RAISE YOUR EXPECTATIONS</h1>
+        <h5 class="text-secondary">REFINED VIEWING EXPERIENCE</h5>
+        <div class="row mt-5 mb-5">
+            <div id="scrn5-p" class="col-md-6 p-5 mt-5">
+                <h1 class="fw-semibold ">Find the perfect pair of shoes</h1>
+                <p>Porem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                    culpa qui official.
+                    <br><br>
+                    Diam vulputate ut pharetra sit. Elit ut aliquam purus sit amet luctus venenatis lectus. Lorem dolor
+                    sed viverra ipsum nunc aliquet. Ut consequat semper viverra nam libero. Velit ut tortor aremn.
+                </p>
+            </div>
+            <div class="col-md-6">
+                <img class="img-fluid" src="./home2.avif" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- footer -->
+    <div class="footerbg">
+        <div class="container">
+            <div class="row ">
+                <div class="col-3"></div>
+                <div class="col-6 mt-5 text-center d-flex justify-content-center flex-column align-items-center">
+                    <h5>SUBSCRIBE NOW</h5>
+                    <h1>GET OUR UPDATES ALWAYS FAST</h1>
+                    <h5>YOUR PERSONAL DATA WILL ALWAYS BE SAFE</h5>
+                    <input type="email" class="form-control w-50 m-3" id="exampleInputEmail1" placeholder="email"
+                        aria-describedby="emailHelp">
+                    <li class="mt-3 mb-5">
+                        <span class="p-2">Search </span>
+                        <span class="p-2">Help </span>
+                        <span class="p-2"> Information </span>
+                        <span class="p-2">Privacy Policy </span>
+                    </li>
+
+                </div>
+                <div class="col-3"></div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
